[tool.poetry]
name = "credible"
version = "0.1.0"
description = ""
authors = ["Ashish Arora <ashisharora24@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
flake8 = "^7.0.0"
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
coverage = "^7.5.1"
pytest-mock = "^3.14.0"
python-semantic-release = "^9.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "pip install poetry && poetry build"

[tool.semantic_release.remote]
name = "origin"
type = "github"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.feat]
match = "(feat|fix|refactor)/.*"
prerelease = true
prerelease_token = "beta"

[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "chore", "style", "refactor", "build"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
